--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Syed Takmil's Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
-<body>
-    
+<body class="open-sans">
+    <header>
+        <nav>
+              <div class="logo">
+                <h3>Tak<span class="red">m</span>il</h3>
+               </div>
+            <ul class="menu">
+                <li><a href="">Portfolio</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><a href=""><button class="btn">Hire Me</button></a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
