--- a/index.html
+++ b/index.html
@@ -18,9 +18,25 @@
             <ul class="menu">
                 <li><a href="">Portfolio</a></li>
                 <li><a href="">Blogs</a></li>
-                <li><a href=""><button class="btn">Hire Me</button></a></li>
+                <li><a href=""><button class="btn , lil">Hire Me</button></a></li>
             </ul>
         </nav>
+        <section> 
+        <div id="banner">
+            <div class="banner-content"><h2>Hi , I am</h2>
+            <h1>Syed Takmil</h1>
+            <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+           <button class="btn">Download CV</button>
+           <button class="btn">Contact</button>
+        </div>
+            <div class="banner-image">
+                <img src="images/takmil.jpg" alt="">
+            </div>
+        </div>    
+        </section>
     </header>
+
+    <main></main>
+    <footer></footer>
 </body>
 </html>
